--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "mysql": "github:mysqljs/mysql",
+    "request": "^2.81.0",
     "socket.io": "^2.0.1"
   }
 }
