--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.15.2",
     "mysql": "github:mysqljs/mysql",
     "request": "^2.81.0",
+    "rollbar": "^2.0.4",
     "socket.io": "^2.0.1"
   }
 }
