--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "^4.15.2",
     "mysql": "github:mysqljs/mysql",
     "request": "^2.81.0",
-    "socket.io": "^2.0.1"
+    "socket.io": "^2.0.1",
+    "steam-totp": "^2.0.1",
+    "steam-tradeoffer-manager": "^2.7.4",
+    "steam-user": "^3.21.4"
   }
 }
