--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "mysql": "github:mysqljs/mysql",
+    "node-schedule": "^1.2.3",
     "request": "^2.81.0",
     "socket.io": "^2.0.1",
     "steam-totp": "^2.0.1",
